--- a/replication_report/05_reproduction_as_is.qmd
+++ b/replication_report/05_reproduction_as_is.qmd
@@ -309,15 +309,19 @@ ray_to_add <- paste("import os",
 replace_all(pattern = "import ray",
             replacement = ray_to_add,
             file = species_richness_script)
+# Ray current modules
+replace_all(pattern = "pool = ray.experimental.ActorPool(actors)",
+            replacement = "pool = ray.util.ActorPool(actors)",
+            file = species_richness_script)
 ```
 
 Run the file
 
 ```{r}
 #| eval: false
-
+setwd("/home/onyxia/work/PA_matching/replication_report")
 library(reticulate)
-my_envname <- "replication-wolf"
+my_envname <- "replication-wolf2"
 use_condaenv(my_envname)
 species_richness_script <- "PA_matching_asis/003 - species_richness.py"
 source_python(species_richness_script)
