--- a/replication_report/04_data_preparation.qmd
+++ b/replication_report/04_data_preparation.qmd
@@ -37,6 +37,56 @@ dir.create("data_processed/rasters")
 
 ## Fetch source data
 
+We downloaded the data from protectedplanet.net and placed it in the folder `replication_report/temp`. We then executed the following script to have it in the right format.
+
+```{r}
+library(aws.s3)
+save_from_s3(from = "Replication_wolf/WDPA_Jan2023_Public_shp.zip",
+             to = "temp/WDPA_Jan2023_Public_shp.zip")
+```
+```{r}
+library(tidyverse)
+library(sf)
+library(aws.s3)
+
+
+
+
+unzip(zipfile = "temp/WDPA_Jan2023_Public_shp.zip", 
+      exdir = "temp")
+unzip(zipfile = "temp/WDPA_Jan2023_Public_shp_0.zip",
+      exdir = "temp/shp0")
+unzip(zipfile = "temp/WDPA_Jan2023_Public_shp_1.zip",
+      exdir = "temp/shp1")
+unzip(zipfile = "temp/WDPA_Jan2023_Public_shp_2.zip",
+      exdir = "temp/shp2")
+wdpa <- st_read("temp/shp0/WDPA_Jan2023_Public_shp-polygons.shp") %>%
+  bind_rows(st_read("temp/shp1/WDPA_Jan2023_Public_shp-polygons.shp")) %>%
+  bind_rows(st_read("temp/shp2/WDPA_Jan2023_Public_shp-polygons.shp"))
+
+# Delete files
+file.remove(list.files("temp", recursive = TRUE, 
+                       full.names = TRUE))
+# Delete folders
+list.dirs("temp", recursive = TRUE, full.names = TRUE) %>%
+  str_subset("temp$", negate = TRUE) %>%
+  map(unlink, recursive = TRUE)
+# Write WDPA
+st_write(obj = wdpa, 
+         dsn = "data_input/PAs/WDPA_Jan2023_Public_shp-polygons.shp")
+```
+```{r}
+library(aws.s3)
+my_wdpa_shp <- list.files(path = "data_input/PAs",
+                     pattern = "WDPA_Jan2023",
+                     full.names = TRUE)
+my_wdpa_shp
+my_wdpa_shp_s3 <- paste0("Replication_wolf/", my_wdpa_shp)
+
+map2(my_wdpa_shp, my_wdpa_shp_s3, put_to_s3)
+```
+
+
 get the right WDPA data. Wolf et al. use the data from January 2020.
 
 ```{r fetch_wdpa}
