Correct error in Julia CSV.read

--- a/replication_report/05_reproduction_as_is.qmd
+++ b/replication_report/05_reproduction_as_is.qmd
@@ -543,6 +543,13 @@ my_wd <- paste0(getwd(), "/")
 replace_all(pattern = "/home/chrisgraywolf/shared/analysis/PA_matching/", 
             replacement = my_wd,
             file = matching_script)
+
+# Need to specify the DataFrame in csv 
+replace_all(pattern = "PA_df = CSV.read(\"data_processed/PAs_tab.csv\")", 
+            replacement = "PA_df = CSV.read(\"data_processed/PAs_tab.csv\", DataFrame)",
+            file = matching_script)
+
+
 ```
 
 
